crates/tlang_parser/tests/snapshots/parser_fn__list_matching_wildcard.snap
---
source: crates/tlang_parser/tests/parser_fn.rs
expression: "parse! (\"fn tail([_, ...xs]) { xs }\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 12,
      kind: FunctionDeclaration(FunctionDeclaration(
        id: 11,
        visibility: Private,
        name: Expr(
          id: 3,
          kind: Path(Path(
            segments: [
              Ident(
                name: "tail",
                span: Span(
                  start: 3,
                  end: 7,
                  start_lc: LineColumn(
                    line: 0,
                    column: 3,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 7,
                  ),
                ),
              ),
            ],
            res: Unresolved,
            span: Span(
              start: 3,
              end: 7,
              start_lc: LineColumn(
                line: 0,
                column: 3,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 7,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 3,
            end: 7,
            start_lc: LineColumn(
              line: 0,
              column: 3,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 7,
            ),
          ),
        ),
        parameters: [
          FunctionParameter(
            pattern: Pat(
              id: 7,
              kind: List([
                Pat(
                  id: 4,
                  kind: Wildcard,
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 9,
                    end: 10,
                    start_lc: LineColumn(
                      line: 0,
                      column: 9,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 10,
                    ),
                  ),
                ),
                Pat(
                  id: 5,
                  kind: Rest(Pat(
                    id: 6,
                    kind: Identifier(Ident(
                      name: "xs",
                      span: Span(
                        start: 15,
                        end: 17,
                        start_lc: LineColumn(
                          line: 0,
                          column: 15,
                        ),
                        end_lc: LineColumn(
                          line: 0,
                          column: 17,
                        ),
                      ),
                    )),
                    leading_comments: [],
                    trailing_comments: [],
                    span: Span(
                      start: 15,
                      end: 17,
                      start_lc: LineColumn(
                        line: 0,
                        column: 15,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 17,
                      ),
                    ),
                  )),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 0,
                    end: 0,
                    start_lc: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                  ),
                ),
              ]),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 8,
                end: 18,
                start_lc: LineColumn(
                  line: 0,
                  column: 8,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 18,
                ),
              ),
            ),
            type_annotation: None,
            span: Span(
              start: 8,
              end: 18,
              start_lc: LineColumn(
                line: 0,
                column: 8,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 18,
              ),
            ),
          ),
        ],
        guard: None,
        return_type_annotation: None,
        body: Block(
          id: 10,
          statements: [],
          expression: Some(Expr(
            id: 9,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "xs",
                  span: Span(
                    start: 22,
                    end: 24,
                    start_lc: LineColumn(
                      line: 0,
                      column: 22,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 24,
                    ),
                  ),
                ),
              ],
              res: Unresolved,
              span: Span(
                start: 22,
                end: 24,
                start_lc: LineColumn(
                  line: 0,
                  column: 22,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 24,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 22,
              end: 24,
              start_lc: LineColumn(
                line: 0,
                column: 22,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 24,
              ),
            ),
          )),
          span: Span(
            start: 20,
            end: 26,
            start_lc: LineColumn(
              line: 0,
              column: 20,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 26,
            ),
          ),
        ),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 26,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 26,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 26,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 26,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 26,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 26,
    ),
  ),
)
