crates/tlang_parser/tests/snapshots/parser_fn__parameter_list_trailing_comma.snap
---
source: crates/tlang_parser/tests/parser_fn.rs
expression: "parse! (\"fn foo(x,) {}\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 7,
      kind: FunctionDeclaration(FunctionDeclaration(
        id: 6,
        visibility: Private,
        name: Expr(
          id: 3,
          kind: Path(Path(
            segments: [
              Ident(
                name: "foo",
                span: Span(
                  start: 3,
                  end: 6,
                  start_lc: LineColumn(
                    line: 0,
                    column: 3,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 6,
                  ),
                ),
              ),
            ],
            res: Unresolved,
            span: Span(
              start: 3,
              end: 6,
              start_lc: LineColumn(
                line: 0,
                column: 3,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 6,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 3,
            end: 6,
            start_lc: LineColumn(
              line: 0,
              column: 3,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 6,
            ),
          ),
        ),
        parameters: [
          FunctionParameter(
            pattern: Pat(
              id: 4,
              kind: Identifier(Ident(
                name: "x",
                span: Span(
                  start: 7,
                  end: 8,
                  start_lc: LineColumn(
                    line: 0,
                    column: 7,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 8,
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 7,
                end: 8,
                start_lc: LineColumn(
                  line: 0,
                  column: 7,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 8,
                ),
              ),
            ),
            type_annotation: None,
            span: Span(
              start: 7,
              end: 8,
              start_lc: LineColumn(
                line: 0,
                column: 7,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 8,
              ),
            ),
          ),
        ],
        params_span: Span(
          start: 6,
          end: 10,
          start_lc: LineColumn(
            line: 0,
            column: 6,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 10,
          ),
        ),
        guard: None,
        return_type_annotation: None,
        body: Block(
          id: 5,
          statements: [],
          expression: None,
          span: Span(
            start: 11,
            end: 13,
            start_lc: LineColumn(
              line: 0,
              column: 11,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 13,
            ),
          ),
        ),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 13,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 13,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 13,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 13,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 13,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 13,
    ),
  ),
)
