crates/tlang_parser/tests/snapshots/parser_fn__recursive_factorial_functional_definition.snap
---
source: crates/tlang_parser/tests/parser_fn.rs
expression: "parse!\n(indoc!\n{\"\n        fn factorial(0) { return 1; }\n        fn factorial(n) { return n * factorial(n - 1); }\n    \"})"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 21,
      kind: FunctionDeclarations([
        FunctionDeclaration(
          id: 8,
          name: Expr(
            id: 3,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "factorial",
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 3,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 12,
                    ),
                  ),
                ),
              ],
              res: Res(
                node_id: None,
              ),
              span: Span(
                start: LineColumn(
                  line: 0,
                  column: 3,
                ),
                end: LineColumn(
                  line: 0,
                  column: 12,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: LineColumn(
                line: 0,
                column: 3,
              ),
              end: LineColumn(
                line: 0,
                column: 12,
              ),
            ),
          ),
          parameters: [
            FunctionParameter(
              pattern: Pat(
                id: 4,
                kind: Literal(UnsignedInteger(0)),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 13,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 14,
                  ),
                ),
              ),
              type_annotation: None,
              span: Span(
                start: LineColumn(
                  line: 0,
                  column: 13,
                ),
                end: LineColumn(
                  line: 0,
                  column: 14,
                ),
              ),
            ),
          ],
          guard: None,
          return_type_annotation: None,
          body: Block(
            id: 7,
            statements: [
              Stmt(
                id: 5,
                kind: Return(Some(Expr(
                  id: 6,
                  kind: Literal(UnsignedInteger(1)),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 25,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 26,
                    ),
                  ),
                ))),
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 18,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 27,
                  ),
                ),
                leading_comments: [],
                trailing_comments: [],
              ),
            ],
            expression: None,
            span: Span(
              start: LineColumn(
                line: 0,
                column: 16,
              ),
              end: LineColumn(
                line: 0,
                column: 29,
              ),
            ),
          ),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: LineColumn(
              line: 0,
              column: 0,
            ),
            end: LineColumn(
              line: 0,
              column: 29,
            ),
          ),
        ),
        FunctionDeclaration(
          id: 20,
          name: Expr(
            id: 9,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "factorial",
                  span: Span(
                    start: LineColumn(
                      line: 1,
                      column: 4,
                    ),
                    end: LineColumn(
                      line: 1,
                      column: 13,
                    ),
                  ),
                ),
              ],
              res: Res(
                node_id: None,
              ),
              span: Span(
                start: LineColumn(
                  line: 1,
                  column: 4,
                ),
                end: LineColumn(
                  line: 1,
                  column: 13,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: LineColumn(
                line: 1,
                column: 4,
              ),
              end: LineColumn(
                line: 1,
                column: 13,
              ),
            ),
          ),
          parameters: [
            FunctionParameter(
              pattern: Pat(
                id: 10,
                kind: Identifier(Ident(
                  name: "n",
                  span: Span(
                    start: LineColumn(
                      line: 1,
                      column: 14,
                    ),
                    end: LineColumn(
                      line: 1,
                      column: 15,
                    ),
                  ),
                )),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: LineColumn(
                    line: 1,
                    column: 14,
                  ),
                  end: LineColumn(
                    line: 1,
                    column: 15,
                  ),
                ),
              ),
              type_annotation: None,
              span: Span(
                start: LineColumn(
                  line: 1,
                  column: 14,
                ),
                end: LineColumn(
                  line: 1,
                  column: 15,
                ),
              ),
            ),
          ],
          guard: None,
          return_type_annotation: None,
          body: Block(
            id: 19,
            statements: [
              Stmt(
                id: 11,
                kind: Return(Some(Expr(
                  id: 18,
                  kind: BinaryOp(BinaryOpExpression(
                    op: Mul,
                    lhs: Expr(
                      id: 12,
                      kind: Path(Path(
                        segments: [
                          Ident(
                            name: "n",
                            span: Span(
                              start: LineColumn(
                                line: 1,
                                column: 26,
                              ),
                              end: LineColumn(
                                line: 1,
                                column: 27,
                              ),
                            ),
                          ),
                        ],
                        res: Res(
                          node_id: None,
                        ),
                        span: Span(
                          start: LineColumn(
                            line: 1,
                            column: 26,
                          ),
                          end: LineColumn(
                            line: 1,
                            column: 27,
                          ),
                        ),
                      )),
                      leading_comments: [],
                      trailing_comments: [],
                      span: Span(
                        start: LineColumn(
                          line: 1,
                          column: 26,
                        ),
                        end: LineColumn(
                          line: 1,
                          column: 27,
                        ),
                      ),
                    ),
                    rhs: Expr(
                      id: 17,
                      kind: Call(CallExpression(
                        callee: Expr(
                          id: 13,
                          kind: Path(Path(
                            segments: [
                              Ident(
                                name: "factorial",
                                span: Span(
                                  start: LineColumn(
                                    line: 1,
                                    column: 30,
                                  ),
                                  end: LineColumn(
                                    line: 1,
                                    column: 39,
                                  ),
                                ),
                              ),
                            ],
                            res: Res(
                              node_id: None,
                            ),
                            span: Span(
                              start: LineColumn(
                                line: 1,
                                column: 30,
                              ),
                              end: LineColumn(
                                line: 1,
                                column: 39,
                              ),
                            ),
                          )),
                          leading_comments: [],
                          trailing_comments: [],
                          span: Span(
                            start: LineColumn(
                              line: 1,
                              column: 30,
                            ),
                            end: LineColumn(
                              line: 1,
                              column: 39,
                            ),
                          ),
                        ),
                        arguments: [
                          Expr(
                            id: 16,
                            kind: BinaryOp(BinaryOpExpression(
                              op: Sub,
                              lhs: Expr(
                                id: 14,
                                kind: Path(Path(
                                  segments: [
                                    Ident(
                                      name: "n",
                                      span: Span(
                                        start: LineColumn(
                                          line: 1,
                                          column: 40,
                                        ),
                                        end: LineColumn(
                                          line: 1,
                                          column: 41,
                                        ),
                                      ),
                                    ),
                                  ],
                                  res: Res(
                                    node_id: None,
                                  ),
                                  span: Span(
                                    start: LineColumn(
                                      line: 1,
                                      column: 40,
                                    ),
                                    end: LineColumn(
                                      line: 1,
                                      column: 41,
                                    ),
                                  ),
                                )),
                                leading_comments: [],
                                trailing_comments: [],
                                span: Span(
                                  start: LineColumn(
                                    line: 1,
                                    column: 40,
                                  ),
                                  end: LineColumn(
                                    line: 1,
                                    column: 41,
                                  ),
                                ),
                              ),
                              rhs: Expr(
                                id: 15,
                                kind: Literal(UnsignedInteger(1)),
                                leading_comments: [],
                                trailing_comments: [],
                                span: Span(
                                  start: LineColumn(
                                    line: 1,
                                    column: 44,
                                  ),
                                  end: LineColumn(
                                    line: 1,
                                    column: 45,
                                  ),
                                ),
                              ),
                            )),
                            leading_comments: [],
                            trailing_comments: [],
                            span: Span(
                              start: LineColumn(
                                line: 1,
                                column: 40,
                              ),
                              end: LineColumn(
                                line: 1,
                                column: 45,
                              ),
                            ),
                          ),
                        ],
                      )),
                      leading_comments: [],
                      trailing_comments: [],
                      span: Span(
                        start: LineColumn(
                          line: 1,
                          column: 30,
                        ),
                        end: LineColumn(
                          line: 1,
                          column: 46,
                        ),
                      ),
                    ),
                  )),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: LineColumn(
                      line: 1,
                      column: 26,
                    ),
                    end: LineColumn(
                      line: 1,
                      column: 46,
                    ),
                  ),
                ))),
                span: Span(
                  start: LineColumn(
                    line: 1,
                    column: 19,
                  ),
                  end: LineColumn(
                    line: 1,
                    column: 47,
                  ),
                ),
                leading_comments: [],
                trailing_comments: [],
              ),
            ],
            expression: None,
            span: Span(
              start: LineColumn(
                line: 1,
                column: 17,
              ),
              end: LineColumn(
                line: 1,
                column: 49,
              ),
            ),
          ),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: LineColumn(
              line: 1,
              column: 1,
            ),
            end: LineColumn(
              line: 1,
              column: 49,
            ),
          ),
        ),
      ]),
      span: Span(
        start: LineColumn(
          line: 0,
          column: 0,
        ),
        end: LineColumn(
          line: 1,
          column: 49,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: LineColumn(
      line: 0,
      column: 0,
    ),
    end: LineColumn(
      line: 1,
      column: 49,
    ),
  ),
)
